tweak: phase1 changes

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,8 +6,6 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-@utilities {
-}
 
 @layer base {
   :root {
@@ -73,3 +71,15 @@ body {
     @apply bg-background text-foreground;
   }
 }
+
+ .stroked-text {
+    @apply font-nippo font-normal;
+    color: #1e1e1e;
+    text-shadow: -1px -1px 0 #2F2E2E, 1px -1px 0 #2F2E2E, -1px 1px 0 #2F2E2E, 1px 1px 0 #2F2E2E;
+  }
+
+  .stroked-copy {
+    color: black;
+    text-shadow: -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff, 1px 1px 0 #fff;
+  }
+
